--- a/resources/sass/components/_logo.scss
+++ b/resources/sass/components/_logo.scss
@@ -2,6 +2,6 @@
 	text-indent: -9999px;
     width: 180px;
     height: 61px;
-    background: url("../img/logo.svg") no-repeat;
+    background: url("imagens/Logo-midnight-blue.svg") no-repeat;
     background-size: auto;
 }
