--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -1,121 +1,107 @@
-
 .input-field {
-	position: relative;
-	width: 100%;
-	margin-bottom:23px;
-	margin-top: 10px;
-	padding: 5px;
+    position: relative;
+    width: 100%;
+    margin-bottom: 23px;
+    margin-top: 10px;
+    padding: 5px;
 }
 
 .input-field input {
-	width: 100%;
-	padding: 5px;
-	box-sizing: border-box;
-	border:  none;
-	outline: none;
-	border-bottom: 2px solid #0b0b31;
-	font-size: 1.2em;
-	color: #4d4d4d;
-	font-weight: 500;
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #0b0b31;
+    font-size: 1.2em;
+    color: #4d4d4d;
+    font-weight: 500;
 }
 
-
-textarea{
-	border: 2px solid #0b0b31 ;
-	line-height: 20px;
+textarea {
+    border: 2px solid #0b0b31;
+    line-height: 20px;
     padding: 10px;
     height: 90px;
-	resize: none;
-	border-radius: 10px;
+    resize: none;
+    border-radius: 10px;
 }
 
 .input-field label {
-	top: 10px;
-	left: 10px;
-	position: absolute;
-	padding:  5px 0;
-	pointer-events: none;
-	font-size: 16px;
-	color: #575757;
-	font-weight: 400;
-	transition: 0.5s;
+    top: 10px;
+    left: 10px;
+    position: absolute;
+    padding: 5px 0;
+    pointer-events: none;
+    font-size: 16px;
+    color: #575757;
+    font-weight: 400;
+    transition: 0.5s;
 }
 
 
 /*Efeito da microinteração*/
-.input-field input:focus + label,
-.input-field input:valid + label
-{
-	top: -1em;
-	left: 0px;
-	font-weight: bold;
-	color: #575757;
-	padding: 2px 5px;
-	border-radius: 5px;
+
+.input-field input:focus+label,
+.input-field input:valid+label {
+    top: -1em;
+    left: 0px;
+    font-weight: bold;
+    color: #575757;
+    border-radius: 5px;
 }
 
-.bt{
-	display: flex;
-	justify-content: flex-end;
-	
-}
-.button-proximo{
-	color: #fff;
-	background-color: #111147;
-	border: 2px solid #fff;
-	padding: 10px 20px;
-	width: 200px;
-	text-align: center;
-	border-radius: 10px;
-	cursor: pointer;
+.bt {
+    display: flex;
+    justify-content: flex-end;
 }
 
-
-.submit-f:hover{
-	background-color: #06061d;
-	color:  #fff;
-	text-decoration: none;
+.button-proximo {
+    color: #fff;
+    background-color: #111147;
+    border: 2px solid #fff;
+    padding: 10px 10px;
+    width: 200px;
+    text-align: center;
+    border-radius: 60px;
+    cursor: pointer;
 }
 
-.submit-g:hover{
-	background-color: #cec6c6;
-	color: black;
-	text-decoration: none;
+.submit-f:hover {
+    background-color: #06061d;
+    color: #fff;
+    text-decoration: none;
 }
 
-.submit-entrar{
-	color: #fff;
-	background-color: #111147;
-	border: 2px solid #fff;
-	padding: 10px 20px;
-	width: 200px;
-	border-radius: 10px;
+.submit-g:hover {
+    background-color: #cec6c6;
+    color: black;
+    text-decoration: none;
+}
+
+.submit-entrar {
+    color: #fff;
+    background-color: #111147;
+    border: 2px solid #fff;
+    padding: 10px 10px;
+    width: 200px;
+    border-radius: 60px;
     cursor: pointer;
     display: block;
     margin: 0 auto;
 }
 
-.submit-entrar:hover, .button-proximo:hover {
-	background-color: #06061d;
-	color: #fff;
-	text-decoration: none;
+.submit-entrar:hover,
+.button-proximo:hover {
+    background-color: #06061d;
+    color: #fff;
+    text-decoration: none;
 }
-
-
-
 
 .progress {
-	height: 20px;
-}
- .progress-bar{
- 	width: 0%;
- }
-
-.cor_titulogrupo{
-	font-weight: bold;
-	color: #111147;
+    height: 20px;
 }
 
-
-
-
+.progress-bar {
+    width: 0%;
+}
