--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: flex-end;
     margin: 20px;
+    padding: 20px;
     flex-wrap: wrap;
     padding: 0 calc((100% - 1200px)/2);
     position: relative;
@@ -56,7 +57,6 @@
         transform-origin: top;
         transform: scaleY(0);
         transition: all .3s;
-        padding: 0 !important;
     }
    .navbar__menu.open {
     transform: scaleY(1);
