coisa sem nocao

--- a/resources/sass/components/_logo.scss
+++ b/resources/sass/components/_logo.scss
@@ -1,7 +1,7 @@
 .logo__replacement {
-	text-indent: -9999px;
+    text-indent: -9999px;
     width: 180px;
     height: 61px;
-    background: url("imagens/Logo-midnight-blue.svg") no-repeat;
+    background: url("../img/logo.svg") no-repeat;
     background-size: auto;
 }
