--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -1,21 +1,19 @@
 .input-field {
     position: relative;
     width: 100%;
-    margin-bottom: 23px;
-    margin-top: 10px;
-    padding: 5px;
+    margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 .input-field input {
     width: 100%;
-    padding: 5px;
+    padding: 4px 4px 4px 35px;
     box-sizing: border-box;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid #0b0b31;
+    border-radius: 5px;
+    border: 1px solid #d1d1d1;
     font-size: 1.2em;
-    color: #4d4d4d;
-    font-weight: 500;
+    color: #414141;
+    outline-color: lightskyblue;
 }
 
 textarea {
@@ -28,13 +26,14 @@ textarea {
 }
 
 .input-field label {
-    top: 10px;
-    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 40px;
     position: absolute;
-    padding: 5px 0;
     pointer-events: none;
     font-size: 16px;
-    color: #575757;
+    color: #3a3a3a;
+    font-weight: normal;
     font-weight: 400;
     transition: 0.5s;
 }
@@ -43,11 +42,10 @@ textarea {
 /*Efeito da microinteração*/
 
 .input-field input:focus+label,
-.input-field input:valid+label{
-    top: -1em;
-    left: 0px;
+.input-field input:valid+label {
+    top: -1.0em;
+    left: 20px;
     font-weight: bold;
-    color: #575757;
     border-radius: 5px;
 }
 
@@ -105,3 +103,9 @@ textarea {
 .progress-bar {
     width: 0%;
 }
+
+.custom-switch {
+    align-items: center;
+}
+
+/*Personalizando botões Facebook, Google e Entrar*/
