--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -80,9 +80,8 @@ hr {
 }
 
 .estudos {
-    width: 120%;
+    width: 100%;
     display: block;
-    margin: 0 auto;
 }
 
 @media(max-width: 740px) {
@@ -120,9 +119,6 @@ hr {
 .position-right {
     width: 65%;
     float: right;
-    border: 1px solid rgb(231, 231, 231);
-    border-radius: 4px;
-    padding: 30px;
     margin-top: 80px;
 }
 
@@ -138,7 +134,8 @@ hr {
     float: right;
     cursor: pointer;
     top: -30px;
-    margin-right: 8px;
+    margin-right: 10px;
+    opacity: 0.3;
 }
 
 .center {
@@ -164,14 +161,60 @@ hr {
 }
 
 .imagemgrupo img {
-    height: 90px;
-    width: 90px;
-    border: 1px solid rgb(204, 204, 204);
+    height: 60px;
+    width: 60px;
+    border: 1px solid rgb(235, 235, 235);
     border-radius: 50%;
 }
 
 .grupo {
-    background-color: rgb(230, 230, 230);
+    margin-top: 30px;
+}
+
+.editar {
+    border: 1px solid rgb(235, 235, 235);
     padding: 20px;
-    border-radius: 60px;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+.editar img {
+    position: relative;
+    display: block;
+    float: right;
+    opacity: 0.6;
+}
+
+.editar h4 {
+    margin-top: -35px;
+    margin-bottom: 20px;
+}
+
+.icones {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    width: 24px;
+}
+
+.icones img {
+    opacity: 0.2;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.label-bordered {
+    cursor: pointer;
+    padding: 5px;
+    border: 1px solid rgb(235, 235, 235);
+    border-radius: 5px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.label-bordered:hover {
+    background-color: rgb(247, 247, 247);
 }
