minor changes and fixes

--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 3em 20px 0 20px;
+    margin: 5em 20px 0 20px;
     padding: 0 calc((100% - 1200px)/2);
 }
 
@@ -72,11 +72,10 @@ hr {
 }
 
 .coruja,
-.grupodeestudos {
+.estudos {
     width: 100%;
-    max-width: 400px;
     display: block;
-    margin: 0 auto;
+    margin-left: 40px;
 }
 
 .estudos {
