--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -1,8 +1,8 @@
 .input-field {
     position: relative;
     width: 100%;
-    margin-bottom: 20px;
-    margin-top: 30px;
+    margin-bottom: .5em;
+    margin-top: 3em;
 }
 
 .input-field input {
