--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -1,12 +1,8 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    margin: 20px;
-    padding: 20px;
-    flex-wrap: wrap;
-    padding: 0 calc((100% - 1200px)/2);
-    position: relative;
+    padding: 10px calc(8%/2);
+    background-color: white;
 }
 
 .navbar__trigger {
@@ -19,22 +15,131 @@
     display: flex;
 }
 
-.navbar__menu a {
-    padding: 10px;
+.navbar__menu__item {
+    padding: 5px 15px;
+    display: flex;
+    align-items: center;
     margin-left: 10px;
-    color: #0b0b31;
-    text-transform: uppercase;
-    transition: ease-in-out .3s;
-    border-radius: 10px;
+    color: #2C3E50;
+    text-transform: capitalize;
     font-family: 'Nunito', sans-serif;
+    cursor: pointer;
 }
 
-.navbar__menu a:hover {
-    color: #fff;
-    background-color: #0b0b31;
+.dropdown-nav {
+    position: relative;
+    margin-right: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-nav__menu {
+    transform: scale(0);
+    border: 1px solid #E1E1E1;
+    position: absolute;
+    top: 110%;
+    right: -15px;
+    background-color: #fff;
+    width: 320px;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.04);
+    transform: scale(0);
+    transform-origin: top right;
+    transition: transform .25s;
+    z-index: 10;
+    outline: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.notifications-menu {
+    width: 350px;
+}
+.dropdown-nav__menu--active {
+    transform: scale(1);
+}
+.dropdown-nav__menu::before {
+    content: '';
+    display: block;
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: -1px;
+    right: 30px;
+    transform: translateY(-50%) rotate(45deg);
+    background-color: #fff;
+    border-left: 1px solid #E1E1E1;
+    border-top: 1px solid #E1E1E1;
+    z-index: -10;
+}
+.dropdown-nav__menu__item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    transition: .1s;
+    color: #707070;
+}
+.dropdown-nav__menu__item:hover {
     text-decoration: none;
+    background-color: rgb(231, 231, 231);
+    color: #707070;
+}
+.dropdown-nav__menu__item:not(:last-child) {
+    border-bottom: 1px solid #E1E1E1;
+}
+.notification-bell {
+    font-size: 26px;
+    position: relative;
+}
+.notification-warning {
+    margin-right: 10px;
+    font-size: 20px;
+    color: #E56161;
+}
+.notification-bell--active::after {
+    content: '';
+    height: 10px;
+    width: 10px;
+    background-color: #E56161;
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    top: 0;
 }
 
+.btn-primary {
+    border-radius: 5px;
+    background-color: #2C3E50;
+    color: white;
+}
+.btn-primary:hover {
+    background-color: rgb(34, 48, 61);
+
+}
+.left-button-icon {
+    margin-right: 5px;
+    font-size: 26px;
+}
+
+.dropdown-icon {
+    font-size: 20px;
+    margin-left: 5px;
+}
+.profile-image-header {
+    width: 40px;
+    border-radius: 50px;
+    border: 1px solid #E1E1E1;
+}
+
+.left-button-icon, .notification-bell {
+    color: #2C3E50;
+}
+.btn-primary .left-button-icon{
+    color: white;
+}
+.only-sm {
+    display: none;
+}
 @media(max-width: 740px) {
     .navbar__trigger {
         display: block;
@@ -42,42 +147,106 @@
     .navbar__menu {
         flex: 1 1 100%;
         flex-direction: column;
-        background: rgb(41, 41, 41);
+        background: white;
         position: absolute;
-        border-radius: 5px;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23);
-        top: 55px;
-        z-index: 2;
+        box-shadow: 0 4px 5px 0 rgba(0,0,0,.04);
+        top: 60px;
+        left: 0;
+        z-index: 10;
         width: 100%;
+        border: 1px solid #E1E1E1;
         margin-top: 10px;
         opacity: 0;
         transform-origin: top;
         transform: scaleY(0);
-        transition: all .3s;
+        transition: transform .5s,opacity .2s;
     }
     .navbar__menu.open {
         transform: scaleY(1);
+        transition: transform .5s,opacity .2s .2s;
         opacity: 1;
     }
     .navbar__menu::after {
         content: '';
+        display: block;
+        width: 14px;
+        height: 14px;
+        position: absolute;
+        top: -1px;
+        right: 30px;
+        transform: translateY(-50%) rotate(45deg);
+        background-color: #fff;
+        border-left: 1px solid #E1E1E1;
+        border-top: 1px solid #E1E1E1;
+        z-index: -10;
+    }
+    .navbar__menu__item {
+        color: #707070;
+        margin-left: 0;
+        padding: 15px 15px;
+        border-bottom: 1px solid #E1E1E1;
+        display: flex;
+    }
+    .navbar__menu__item:last-child {
+        border: none;
+        
+    }
+    .btn-primary {
+        border-radius: 0;
+        color: white;
+    }
+
+    .dropdown-nav {
+        display: block;
+        margin-right: 0;
+
+    }
+    .dropdown-nav__menu {
+        display: block;
+        position: relative;
+        width: 100%;
+        transform: scale(1);
+        box-sizing: content-box;
+        opacity: 0;
+        top: -1px;
+        right: 0;
+        margin: 0;
+        box-sizing: content-box;
+        justify-content: center;
+        align-items: center;
+        max-height: 0px;
+        overflow: hidden;
+        border: none;
+        padding: 0;
+        transition: max-height .5s,opacity .2s;
+    }
+    .dropdown-nav__menu--active {
+        opacity: 1;
+        border: 1px solid #E1E1E1;
+        border-bottom: none;
+        max-height: 300px;
+        transition: max-height 1s,opacity .2s .2s;
+    }
+    .dropdown-nav__menu::before {
+        content: '';
+        display: block;
         width: 0;
         height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-bottom: 10px solid rgb(41, 41, 41);
-        position: absolute;
-        top: -9px;
-        right: 10px;
+        border-top: 1px solid #E1E1E1;
+        z-index: -10;
     }
-    .navbar__menu a {
-        color: white;
-        margin-left: 0;
-        padding: 1em;
-        border-bottom: 1px solid white;
-        border-radius: 0;
+    .dropdown-nav__menu__item {
+        display: flex;
+        padding: 15px 0 15px 30px;
     }
-    .navbar__menu a:last-child {
-        border: none;
+    .dropdown-nav__trigger {
+        display: flex !important;
     }
+    .only-sm {
+        display: block;
+    }
+    .notification-bell {
+        margin-right: 5px;
+    }
+    
 }
