--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -34,6 +34,82 @@
     align-items: center;
 }
 
+
+.dropdown-nav__sub {
+    background-color: #fff;
+    transform-origin: top;
+    z-index: 10;
+    display: block;
+    position: relative;
+    width: 100%;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    max-height: 0px;
+    overflow: hidden;
+    border: none;
+    padding: 0;
+    transition: max-height .5s,opacity .2s;
+    &--active {
+        transform: scale(1);
+    }
+    &::before {
+        content: '';
+        display: block;
+        width: 14px;
+        height: 14px;
+        position: absolute;
+        top: -1px;
+        right: 30px;
+        transform: translateY(-50%) rotate(45deg);
+        background-color: #fff;
+        border-left: 1px solid #E1E1E1;
+        border-top: 1px solid #E1E1E1;
+        z-index: -1;
+    }
+    &__item {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        transition: .1s;
+        color: #707070;
+        border-bottom: 1px solid #E1E1E1;
+
+        &:hover {
+            text-decoration: none;
+            background-color: rgb(231, 231, 231);
+            color: #707070;
+        }
+ 
+    }
+}
+
+.dropdown-nav__sub--active {
+    opacity: 1;
+    border: 1px solid #E1E1E1;
+    border-bottom: none;
+    max-height: 300px;
+    transition: max-height 1s,opacity .2s .2s;
+}
+.dropdown-nav__sub::before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 1px solid #E1E1E1;
+    z-index: -10;
+}
+.dropdown-nav__sub__item {
+    display: flex;
+    padding: 15px 0 15px 30px;
+}
+// .dropdown-nav__trigger {
+//     display: flex !important;
+// }
+
+
+
+
 .dropdown-nav__menu {
     transform: scale(0);
     border: 1px solid #E1E1E1;
