--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -1,3 +1,28 @@
+/* Customizar barra de rolagem */
+
+::-webkit-scrollbar {
+    width: 15px;
+    background-color: #f8f8f8;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #e6e6e6;
+}
+
+::-webkit-scrollbar-button {
+    background-color: #e6e6e6;
+}
+
+
+/*Fundo azul Onda */
+
+.wave {
+    background-image: url("../imagens/curva.png");
+    background-position-x: right;
+    background-size: 35% 100%;
+    background-repeat: no-repeat;
+}
+
 .register-section,
 .creategroup-section {
     display: flex;
@@ -216,4 +241,88 @@ input[type="file"] {
 
 .label-bordered:hover {
     background-color: rgb(247, 247, 247);
+}
+
+.control-label img {
+    height: 24px;
+    width: 24px;
+}
+
+.adicionar {
+    background-color: #111147;
+    color: white;
+}
+
+.conversar {
+    background-color: #e8e6ee;
+    color: rgb(0, 0, 0);
+}
+
+.adicionar:hover {
+    background-color: #0b0b2c;
+    color: white;
+}
+
+.conversar:hover {
+    background-color: #cbcacf;
+    color: rgb(0, 0, 0);
+}
+
+.bloco a {
+    padding: 10px 20px;
+    border-radius: 60px;
+}
+
+.bloco a img {
+    padding: 0px 5px 4px 0px;
+}
+
+.bloco a:hover {
+    text-decoration: none;
+}
+
+.main {
+    margin: 0px 0px 0px 60px;
+    width: 60%;
+}
+
+.main h1 {
+    margin-top: 20px;
+}
+
+.bloco {
+    padding: 20px 40px 20px 40px;
+}
+
+.barra {
+    width: 60%;
+}
+
+.position-button {
+    float: right;
+    margin-top: -20px;
+}
+
+.position-button a {
+    margin-left: 20px;
+}
+
+.sugestao {
+    border: 1px solid #e7e7e7;
+    border-radius: 5px;
+}
+
+.position-topo {
+    position: relative;
+    left: 65%;
+    margin-top: -110px;
+}
+
+.alinhar {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.totalgrupo {
+    margin-bottom: 15px;
 }
