--- a/resources/sass/criar_grupo.scss
+++ b/resources/sass/criar_grupo.scss
@@ -1,5 +1,5 @@
 @import 'components/reset';
 @import 'components/logo';
+@import 'components/style';
+@import 'components/form';
 @import 'components/navbar';
-@import 'components/card';
-
