--- a/resources/sass/assets/_reset.scss
+++ b/resources/sass/assets/_reset.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -37,7 +39,7 @@ blockquote, q {
 	quotes: none;
 }
 blockquote:before, blockquote:after,
-q:before, q:after {
+q:before, q:after { 
 	content: '';
 	content: none;
 }
