--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -2,7 +2,30 @@
 @import "components/navbar";
 @import 'components/logo';
 @import 'components/search-bar';
-
+@import 'components/forms/form';
+@import 'layouts/l-content-aside';
 body {
     background-color: #F9F9F9;
+}
+
+.home-adicionar-interesse {
+    background-color: #fff;
+    padding: 1em;
+    margin-top: 2rem;
+    @include basicBorderBox;
+    &__fields {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+.container {
+    padding: 0px $side-spaces/2;
+}
+.home-interesse-form-group {
+    flex: 1 1 220px;
+    align-self: flex-end;
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
 }
