--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -1,8 +1,8 @@
 .register-section,
 .creategroup-section {
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
+    flex-direction: row;
     margin: 5em 20px 0 20px;
     padding: 0 calc((100% - 1200px)/2);
 }
@@ -10,6 +10,7 @@
 .register-section__item,
 .creategroup-section__item {
     flex: 1 1 0;
+  
 }
 
 .welcome-info,
@@ -32,6 +33,40 @@
     margin-top: -20px;
     margin-bottom: 1em;
 }
+
+
+
+#interesses .register-section--flex{
+   
+    margin: 5em 20px 0 20px;
+    padding: 0 calc((100% - 1200px)/2);
+
+}
+
+#interesses .register-section__item--flex{
+
+    flex: 1 1 0;
+    
+    
+}
+
+#interesses .image-section__item--flex{
+    
+    flex: 1 1 0;
+    
+}
+
+#interesses .welcome-info--flex{
+    flex: 1 ;
+    margin-bottom: 1em;
+    font-size: 1.5em;
+    text-align: center;
+    color: #0b0b31;
+    font-weight: bold;
+    font-family: 'Nunito', sans-serif;
+}
+
+
 
 .welcome-sub-info {
     font-size: 1.17em;
@@ -71,7 +106,20 @@ hr {
     margin: 2em 0;
 }
 
-.coruja,
+.coruja-livro{
+    width: 65%;
+    margin-left: 50px;
+}
+
+.titleform-section{
+    margin-bottom: 0.2em;
+    color:#3a3a3a;
+    font-weight: bold;
+    font-family: 'Nunito', sans-serif;
+}
+
+
+.coruja, 
 .estudos {
     width: 100%;
     display: block;
@@ -85,6 +133,10 @@ hr {
 
 @media(max-width: 740px) {
     .coruja {
+        display: none;
+    }
+
+    .coruja-livro{
         display: none;
     }
     .estudos {
