--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -1,16 +1,48 @@
+/* Customizar barra de rolagem */
+
+::-webkit-scrollbar {
+    width: 15px;
+    background-color: #f8f8f8;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #e6e6e6;
+}
+
+::-webkit-scrollbar-button {
+    background-color: #e6e6e6;
+}
+
+
+/*Fundo azul Onda */
+
+.wave {
+    background-image: url("../imagens/curva.png");
+    background-position-x: right;
+    background-size: 35% 100%;
+    background-repeat: no-repeat;
+}
+
+i {
+    padding-right: 5px;
+}
+
+.user-options-icon {
+    font-size: 24px;
+}
+
 .register-section,
 .creategroup-section {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 5em 20px 0 20px;
+    margin: 3em 20px 0 20px;
     padding: 0 calc((100% - 1200px)/2);
 }
 
 .register-section__item,
 .creategroup-section__item {
     flex: 1 1 0;
-  
 }
 
 .welcome-info,
@@ -34,30 +66,21 @@
     margin-bottom: 1em;
 }
 
-
-
-#interesses .register-section--flex{
-   
+#interesses .register-section--flex {
     margin: 5em 20px 0 20px;
     padding: 0 calc((100% - 1200px)/2);
-
 }
 
-#interesses .register-section__item--flex{
-
+#interesses .register-section__item--flex {
     flex: 1 1 0;
-    
-    
 }
 
-#interesses .image-section__item--flex{
-    
+#interesses .image-section__item--flex {
     flex: 1 1 0;
-    
 }
 
-#interesses .welcome-info--flex{
-    flex: 1 ;
+#interesses .welcome-info--flex {
+    flex: 1;
     margin-bottom: 1em;
     font-size: 1.5em;
     text-align: center;
@@ -65,8 +88,6 @@
     font-weight: bold;
     font-family: 'Nunito', sans-serif;
 }
-
-
 
 .welcome-sub-info {
     font-size: 1.17em;
@@ -106,20 +127,19 @@ hr {
     margin: 2em 0;
 }
 
-.coruja-livro{
+.coruja-livro {
     width: 65%;
     margin-left: 50px;
 }
 
-.titleform-section{
+.titleform-section {
     margin-bottom: 0.2em;
-    color:#3a3a3a;
+    color: #3a3a3a;
     font-weight: bold;
     font-family: 'Nunito', sans-serif;
 }
 
-
-.coruja, 
+.coruja,
 .estudos {
     width: 100%;
     display: block;
@@ -131,15 +151,20 @@ hr {
     display: block;
 }
 
+.coruja-selection {
+    display: block;
+    width: 87%;
+}
+
 @media(max-width: 740px) {
     .coruja {
         display: none;
     }
-
-    .coruja-livro{
+    .coruja-livro {
         display: none;
     }
-    .estudos {
+    .estudos,
+    .coruja-selection {
         display: none;
     }
     .register-section {
@@ -161,10 +186,20 @@ hr {
 }
 
 .image-circle {
-    height: 170px;
-    width: 170px;
+    background-color: white;
+    border: 4px solid rgb(247, 248, 248);
+    height: 150px;
+    overflow: hidden;
+    width: 150px;
     border-radius: 50%;
-    border: 1px solid rgb(204, 204, 204);
+    margin: 0 auto;
+}
+
+.image-circle img {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    opacity: 0.8;
 }
 
 .position-right {
@@ -211,17 +246,6 @@ hr {
     margin-top: 10px;
 }
 
-.imagemgrupo img {
-    height: 60px;
-    width: 60px;
-    border: 1px solid rgb(235, 235, 235);
-    border-radius: 50%;
-}
-
-.grupo {
-    margin-top: 30px;
-}
-
 .editar {
     border: 1px solid rgb(235, 235, 235);
     padding: 20px;
@@ -242,10 +266,8 @@ hr {
 }
 
 .icones {
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
+    margin-top: -28px;
+    margin-left: 10px;
     width: 24px;
 }
 
@@ -259,13 +281,21 @@ input[type="file"] {
 
 .label-bordered {
     cursor: pointer;
-    padding: 5px;
     border: 1px solid rgb(235, 235, 235);
-    border-radius: 5px;
-    margin-top: 10px;
-    font-weight: bold;
+    padding: 5px;
+    background-color: white;
+    border-radius: 50%;
+    float: right;
+    margin-left: 35px;
+    margin-top: -50px;
+    position: absolute;
 }
 
 .label-bordered:hover {
     background-color: rgb(247, 247, 247);
+}
+
+.control-label img {
+    height: 24px;
+    width: 24px;
 }
