--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -26,16 +26,14 @@
     cursor: pointer;
 }
 
-.navbar__menu__item:hover{
-    background-color: #0b0b31;
-    color: white;
-    border-radius: 10px;
-    padding: 10px;
+.navbar__menu__item:hover {
+    background-color: rgb(241, 241, 241);
 }
 
-.icone-formatura{
+.icone-formatura {
     padding-right: 5px;
 }
+
 .dropdown-nav {
     position: relative;
     margin-right: 20px;
@@ -43,7 +41,6 @@
     display: flex;
     align-items: center;
 }
-
 
 .dropdown-nav__sub {
     background-color: #fff;
@@ -59,7 +56,7 @@
     overflow: hidden;
     border: none;
     padding: 0;
-    transition: max-height .5s,opacity .2s;
+    transition: max-height .5s, opacity .2s;
     &--active {
         transform: scale(1);
     }
@@ -84,13 +81,11 @@
         transition: .1s;
         color: #707070;
         border-bottom: 1px solid #E1E1E1;
-
         &:hover {
             text-decoration: none;
             background-color: rgb(231, 231, 231);
             color: #707070;
         }
- 
     }
 }
 
@@ -99,8 +94,9 @@
     border: 1px solid #E1E1E1;
     border-bottom: none;
     max-height: 300px;
-    transition: max-height 1s,opacity .2s .2s;
+    transition: max-height 1s, opacity .2s .2s;
 }
+
 .dropdown-nav__sub::before {
     content: '';
     display: block;
@@ -109,17 +105,15 @@
     border-top: 1px solid #E1E1E1;
     z-index: -10;
 }
+
 .dropdown-nav__sub__item {
     display: flex;
     padding: 15px 0 15px 30px;
 }
+
 // .dropdown-nav__trigger {
 //     display: flex !important;
 // }
-
-
-
-
 .dropdown-nav__menu {
     transform: scale(0);
     border: 1px solid #E1E1E1;
@@ -128,7 +122,7 @@
     right: -15px;
     background-color: #fff;
     width: 320px;
-    box-shadow: 0 4px 5px 0 rgba(0,0,0,.04);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .04);
     transform: scale(0);
     transform-origin: top right;
     transition: transform .25s;
@@ -138,12 +132,15 @@
     margin: 0;
     padding: 0;
 }
+
 .notifications-menu {
     width: 350px;
 }
+
 .dropdown-nav__menu--active {
     transform: scale(1);
 }
+
 .dropdown-nav__menu::before {
     content: '';
     display: block;
@@ -158,6 +155,7 @@
     border-top: 1px solid #E1E1E1;
     z-index: -10;
 }
+
 .dropdown-nav__menu__item {
     display: flex;
     align-items: center;
@@ -165,23 +163,28 @@
     transition: .1s;
     color: #707070;
 }
+
 .dropdown-nav__menu__item:hover {
     text-decoration: none;
     background-color: rgb(231, 231, 231);
     color: #707070;
 }
+
 .dropdown-nav__menu__item:not(:last-child) {
     border-bottom: 1px solid #E1E1E1;
 }
+
 .notification-bell {
     font-size: 26px;
     position: relative;
 }
+
 .notification-warning {
     margin-right: 10px;
     font-size: 20px;
     color: #E56161;
 }
+
 .notification-bell--active::after {
     content: '';
     height: 10px;
@@ -198,10 +201,11 @@
     background-color: #2C3E50;
     color: white;
 }
+
 .btn-primary:hover {
     background-color: rgb(34, 48, 61);
-
 }
+
 .left-button-icon {
     margin-right: 5px;
     font-size: 26px;
@@ -211,21 +215,26 @@
     font-size: 20px;
     margin-left: 5px;
 }
+
 .profile-image-header {
     width: 40px;
     border-radius: 50px;
     border: 1px solid #E1E1E1;
 }
 
-.left-button-icon, .notification-bell {
+.left-button-icon,
+.notification-bell {
     color: #2C3E50;
 }
-.btn-primary .left-button-icon{
+
+.btn-primary .left-button-icon {
     color: white;
 }
+
 .only-sm {
     display: none;
 }
+
 @media(max-width: 740px) {
     .navbar__trigger {
         display: block;
@@ -235,7 +244,7 @@
         flex-direction: column;
         background: white;
         position: absolute;
-        box-shadow: 0 4px 5px 0 rgba(0,0,0,.04);
+        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .04);
         top: 60px;
         left: 0;
         z-index: 10;
@@ -245,11 +254,11 @@
         opacity: 0;
         transform-origin: top;
         transform: scaleY(0);
-        transition: transform .5s,opacity .2s;
+        transition: transform .5s, opacity .2s;
     }
     .navbar__menu.open {
         transform: scaleY(1);
-        transition: transform .5s,opacity .2s .2s;
+        transition: transform .5s, opacity .2s .2s;
         opacity: 1;
     }
     .navbar__menu::after {
@@ -275,17 +284,14 @@
     }
     .navbar__menu__item:last-child {
         border: none;
-        
     }
     .btn-primary {
         border-radius: 0;
         color: white;
     }
-
     .dropdown-nav {
         display: block;
         margin-right: 0;
-
     }
     .dropdown-nav__menu {
         display: block;
@@ -304,14 +310,14 @@
         overflow: hidden;
         border: none;
         padding: 0;
-        transition: max-height .5s,opacity .2s;
+        transition: max-height .5s, opacity .2s;
     }
     .dropdown-nav__menu--active {
         opacity: 1;
         border: 1px solid #E1E1E1;
         border-bottom: none;
         max-height: 300px;
-        transition: max-height 1s,opacity .2s .2s;
+        transition: max-height 1s, opacity .2s .2s;
     }
     .dropdown-nav__menu::before {
         content: '';
@@ -334,5 +340,4 @@
     .notification-bell {
         margin-right: 5px;
     }
-    
 }
