--- a/resources/sass/pages/criar_grupo.scss
+++ b/resources/sass/pages/criar_grupo.scss
@@ -3,3 +3,6 @@
 @import '../components/style';
 @import '../components/form';
 @import '../components/navbar';
+.modal-body {
+    padding: 40px;
+}
