--- a/resources/sass/pages/perfil.scss
+++ b/resources/sass/pages/perfil.scss
@@ -1,9 +1,8 @@
-@import 'components/reset';
-@import 'components/logo';
-@import 'components/navbar';
-@import 'components/style';
-@import 'components/form';
-
+@import '../components/reset';
+@import '../components/logo';
+@import '../components/style';
+@import '../components/form';
+@import '../components/navbar';
 .dados-pessoais-perfil {
     width: 65%;
 }
