--- a/resources/sass/pages/perfil.scss
+++ b/resources/sass/pages/perfil.scss
@@ -15,6 +15,19 @@
     background-color: white;
 }
 
+.button-excluir {
+    background-color: white;
+    border: none;
+    position: relative;
+    display: block;
+    float: right;
+    margin-left: 10px;
+}
+
+.editar p {
+    margin-bottom: 12px;
+}
+
 .editar img {
     position: relative;
     display: block;
@@ -90,4 +103,10 @@ ul .list-group-item {
     float: right;
     height: 200px;
     width: 200px;
+}
+
+.alert {
+    font-size: 25px;
+    text-align: center;
+    color: rgb(128, 128, 128);
 }
