Modal para adicionar grupo

--- a/resources/sass/assets/_variables.scss
+++ b/resources/sass/assets/_variables.scss
@@ -13,6 +13,9 @@ $font-stack: 'Nunito', sans-serif;
 //Layout
 $side-spaces: 8%;
 
+$box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .04);
+
+
 //Mixins
 @mixin basicBorderBox {
     border: 1px solid $border-color;
