--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -6,8 +6,7 @@
 @import '../components/forms/form';
 @import '../layouts/l-content-aside';
 @import "../components/btn";
-
-
+@import "../components/modal";
 
 body {
     background-color: $background-color;
