--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -2,12 +2,12 @@
 @import '../components/reset';
 @import "../components/navbar";
 @import '../components/logo';
+@import '../components/style';
 @import '../components/search-bar';
 @import '../components/forms/form';
 @import '../layouts/l-content-aside';
 @import "../components/btn";
 @import "../components/modal";
-
 body {
     background-color: $background-color;
 }
@@ -34,4 +34,93 @@ body {
     &:not(:last-child) {
         margin-right: 10px;
     }
+}
+
+aside {
+    padding: 10px;
+    height: 300px;
+    background-color: $background-color;
+}
+
+.box-aside {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    border: 1px solid $border-color;
+    width: 250px;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.online img {
+    width: 9px;
+    height: 9px;
+    margin-right: 5px;
+}
+
+.online {
+    margin-bottom: 10px;
+    color: rgb(56, 56, 56);
+    font-weight: 600;
+}
+
+.pessoas-online img {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid $border-color;
+    margin-right: 10px;
+}
+
+.pessoas-online {
+    padding: 7px;
+    display: block;
+}
+
+.pessoas-online a {
+    color: rgb(56, 56, 56);
+    font-weight: 600;
+}
+
+.post img {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
+.post {
+    color: rgb(56, 56, 56);
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.box-post {
+    margin-bottom: 10px;
+}
+
+.box-post img {
+    height: 120px;
+    width: 230px;
+    background-color: rgb(199, 199, 199);
+    opacity: 0.2;
+}
+
+.box-post p {
+    text-align: justify;
+    padding: 0px 20px 0px 20px;
+}
+
+.chat {}
+
+.button-chat {
+    color: $primary-color;
+    background-color: #fff;
+    padding: 5px 150px 5px 10px;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.button-chatCompleto {
+    background-color: $primary-color;
+    color: #fff;
+    border-radius: 5px 5px 0px 0px;
+    padding: 5px 70px 5px 10px;
 }
