--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -8,6 +8,7 @@
 @import '../layouts/l-content-aside';
 @import "../components/btn";
 @import "../components/modal";
+@import '../components/form';
 body {
     background-color: $background-color;
 }
@@ -16,12 +17,17 @@ body {
     background-color: #fff;
     padding: 1em;
     margin-top: 2rem;
+    margin-top: 1rem;
     @include basicBorderBox;
     &__fields {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
     }
+}
+
+.grupospessoais {
+    padding-top: 20px;
 }
 
 .container {
@@ -38,7 +44,6 @@ body {
 
 aside {
     padding: 10px;
-    height: 300px;
     background-color: $background-color;
 }
 
@@ -46,9 +51,9 @@ aside {
     background-color: rgb(255, 255, 255);
     padding: 10px;
     border: 1px solid $border-color;
-    width: 250px;
     font-size: 14px;
     margin-bottom: 20px;
+    margin-left: 30px;
 }
 
 .online img {
@@ -74,11 +79,13 @@ aside {
 .pessoas-online {
     padding: 7px;
     display: block;
+    position: relative;
 }
 
 .pessoas-online a {
     color: rgb(56, 56, 56);
     font-weight: 600;
+    margin: 0;
 }
 
 .post img {
@@ -109,8 +116,6 @@ aside {
     padding: 0px 20px 0px 20px;
 }
 
-.chat {}
-
 .button-chat {
     color: $primary-color;
     background-color: #fff;
@@ -122,5 +127,24 @@ aside {
     background-color: $primary-color;
     color: #fff;
     border-radius: 5px 5px 0px 0px;
-    padding: 5px 70px 5px 10px;
+    padding: 5px 40px 5px 10px;
+}
+
+.gruposparticipo img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 1px solid $border-color;
+}
+
+.gruposparticipo {
+    background-color: white;
+    border: 1px solid $border-color;
+    padding: 20px;
+}
+
+@media(max-width: 800px) {
+    aside {
+        display: none;
+    }
 }
