--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -1,3 +1,5 @@
+@import '../assets/variables';
+
 /* Customizar barra de rolagem */
 
 ::-webkit-scrollbar {
@@ -176,21 +178,12 @@ hr {
     }
 }
 
-.categoria {
-    padding: 20px;
-    border: 2px solid gray;
-}
-
-.modal-title {
-    color: black;
-}
-
 .image-circle {
     background-color: white;
     border: 4px solid rgb(247, 248, 248);
-    height: 150px;
+    height: 100px;
     overflow: hidden;
-    width: 150px;
+    width: 100px;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -200,6 +193,15 @@ hr {
     height: 100%;
     width: 100%;
     opacity: 0.8;
+}
+
+.categoria {
+    padding: 20px;
+    border: 2px solid gray;
+}
+
+.modal-title {
+    color: black;
 }
 
 .position-right {
