--- a/resources/sass/pages/perfil.scss
+++ b/resources/sass/pages/perfil.scss
@@ -23,7 +23,7 @@
     position: relative;
     display: block;
     float: right;
-    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .editar p {
