--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -181,9 +181,9 @@ hr {
 .image-circle {
     background-color: white;
     border: 4px solid rgb(247, 248, 248);
-    height: 100px;
+    height: 150px;
     overflow: hidden;
-    width: 100px;
+    width: 150px;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -192,7 +192,7 @@ hr {
     position: relative;
     height: 100%;
     width: 100%;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .categoria {
@@ -269,8 +269,11 @@ input[type="file"] {
     background-color: white;
     border-radius: 50%;
     float: right;
+    height: 35px;
+    width: 35px;
     margin-left: 35px;
     margin-top: -50px;
+    box-shadow: 2px 2px 0 rgb(224, 224, 224);
     position: absolute;
 }
 
