--- a/resources/sass/pages/chat_completo.scss
+++ b/resources/sass/pages/chat_completo.scss
@@ -62,6 +62,115 @@
     width: 100%;
 }
 
+.inbox_people {
+    background: #f8f8f8 none repeat scroll 0 0;
+    float: left;
+    overflow: hidden;
+    width: 100%;
+    border-right: 1px solid #c4c4c4;
+}
+
+.inbox_msg {
+    border: 1px solid #c4c4c4;
+    clear: both;
+    overflow: hidden;
+}
+
+.top_spac {
+    margin: 20px 0 0;
+}
+
+.recent_heading {
+    float: left;
+    width: 40%;
+}
+
+.srch_bar {
+    display: inline-block;
+    text-align: right;
+    width: 60%;
+}
+
+.headind_srch {
+    padding: 10px 29px 10px 20px;
+    overflow: hidden;
+    border-bottom: 1px solid #c4c4c4;
+}
+
+.recent_heading h4 {
+    color: #05728f;
+    font-size: 21px;
+    margin: auto;
+}
+
+.srch_bar input {
+    border: 1px solid #cdcdcd;
+    border-width: 0 0 1px 0;
+    width: 100%;
+    padding: 2px 0 4px 6px;
+    background: none;
+}
+
+.srch_bar .input-group-addon button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    padding: 0;
+    color: #707070;
+    font-size: 18px;
+}
+
+.srch_bar .input-group-addon {
+    margin: 0 0 0 -27px;
+}
+
+.chat_ib h5 {
+    font-size: 15px;
+    color: #464646;
+    margin: 0 0 8px 0;
+}
+
+.chat_ib h5 span {
+    font-size: 13px;
+    float: right;
+}
+
+.chat_ib p {
+    font-size: 14px;
+    color: #989898;
+    margin: auto
+}
+
+.chat_img {
+    float: left;
+    width: 10%;
+}
+
+.chat_ib {
+    float: left;
+    padding: 0 0 0 15px;
+    width: 88%;
+}
+
+.chat_people {
+    overflow: hidden;
+    clear: both;
+}
+
+.chat_list {
+    border-bottom: 1px solid #c4c4c4;
+    margin: 0;
+    padding: 18px 16px 10px;
+}
+
+.inbox_chat {
+    height: 390px;
+    overflow-y: scroll;
+}
+
+.active_chat {
+    background: #ebebeb;
+}
+
 .incoming_msg_img {
     display: inline-block;
     width: 35px;
@@ -74,7 +183,7 @@
     display: inline-block;
     padding: 0 0 0 10px;
     vertical-align: top;
-    width: 92%;
+    width: 100%;
 }
 
 .received_withd_msg p {
@@ -85,6 +194,7 @@
     font-size: 16px;
     margin: 0;
     padding: 10px;
+    max-width: 57%;
 }
 
 .time_date {
@@ -95,12 +205,12 @@
 }
 
 .received_withd_msg {
-    width: 57%;
+    width: 100%;
 }
 
 .mesgs {
     float: initial;
-    height: 450px;
+    height: 320px;
     padding: 30px 25px 0px 25px;
     width: 100%;
     overflow-y: scroll;
@@ -114,7 +224,6 @@
     margin: 0;
     color: #fff;
     padding: 10px;
-    width: 100%;
 }
 
 .outgoing_msg {
@@ -140,4 +249,19 @@
 .enviarmsg img {
     height: 25px;
     width: 25px;
+}
+
+.adicionardoc {
+    box-shadow: 1px 1px 10px 1px rgb(224, 224, 224);
+    height: 40px;
+    width: 40px;
+    align-items: center;
+    padding: 5px;
+    background-color: white;
+    margin-top: 10px;
+}
+
+.inputchat {
+    margin-left: 50px;
+    width: 90%;
 }
