--- a/resources/sass/assets/_variables.scss
+++ b/resources/sass/assets/_variables.scss
@@ -1,21 +1,16 @@
 //Colors
 $primary-color: #2C3E50;
-$shadow-color: rgba(0,0,0,.04);
+$shadow-color: rgba(0, 0, 0, .04);
 $border-color: #E1E1E1;
 $text-color: #707070;
 $danger-color: #e63e3e;
 $background-color: #F9F9F9;
-
 //Typography
-$font-stack: 'Nunito', sans-serif;
-
-
+$font-stack: 'Nunito',
+sans-serif;
 //Layout
 $side-spaces: 8%;
-
 $box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .04);
-
-
 //Mixins
 @mixin basicBorderBox {
     border: 1px solid $border-color;
@@ -23,8 +18,9 @@ $box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .04);
 
 @mixin hoverDarkenEffect($COLOR) {
     transition: ease-in-out .2s;
-      &:hover, &:focus {
-          color: white;
-            background-color: darken($color: $COLOR, $amount: 20);
-      }
+    &:hover,
+    &:focus {
+        color: white;
+        background-color: darken($color: $COLOR, $amount: 20);
+    }
 }
