--- a/resources/sass/components/_logo.scss
+++ b/resources/sass/components/_logo.scss
@@ -1,7 +1,15 @@
 .logo__replacement {
-	text-indent: -9999px;
+    text-indent: -9999px;
     width: 150px;
     height: 50px;
     background: url("../img/logo.svg") no-repeat;
+    background-size: auto;
+}
+
+.logo__replacement__white {
+    text-indent: -9999px;
+    width: 150px;
+    height: 50px;
+    background: url("../img/whiteLogo.svg") no-repeat;
     background-size: auto;
 }
