--- a/resources/sass/pages/perfil.scss
+++ b/resources/sass/pages/perfil.scss
@@ -1,10 +1,14 @@
+@import '../assets/variables';
 @import '../components/reset';
+@import "../components/navbar";
 @import '../components/logo';
 @import '../components/style';
+@import '../components/search-bar';
+@import '../components/forms/form';
+@import '../layouts/l-content-aside';
+@import "../components/btn";
+@import "../components/modal";
 @import '../components/form';
-@import '../components/btn';
-@import '../components/navbar';
-@import '../assets/variables';
 body {
     background-color: #F9F9F9;
 }
@@ -48,8 +52,8 @@ body {
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 22px;
-    margin: 0px 0px 10px 0px;
-    text-align: center;
+    margin: 15px 0px 10px 0px;
+    text-align: left;
 }
 
 .interesses-cadastrados h3 {
@@ -114,9 +118,13 @@ ul .list-group-item {
 }
 
 .alert {
-    font-size: 25px;
+    font-size: 22px;
     text-align: center;
     color: rgb(128, 128, 128);
+}
+
+.toggle {
+    text-decoration: none;
 }
 
 .dadospessoais {
@@ -128,6 +136,19 @@ ul .list-group-item {
 
 .dadospessoais p {
     margin-bottom: 10px;
+}
+
+.dadospessoais a {
+    position: relative;
+    float: right;
+}
+
+.buttonadicionar {
+    position: relative;
+    float: right;
+    padding: 12px;
+    width: 100px;
+    right: 10px;
 }
 
 .botaowhite {
