--- a/resources/sass/pages/chat_completo.scss
+++ b/resources/sass/pages/chat_completo.scss
@@ -14,11 +14,6 @@
     height: 60px;
 }
 
-.historico,
-.mensagem-individual {
-    height: 100vh;
-}
-
 .imgmenu {
     height: 35px;
     width: 35px;
@@ -37,11 +32,8 @@
 
 .menu_chat h2 {
     font-family: $font-stack;
+    padding: 10px 20px;
     width: 100%;
-}
-
-.content_chat {
-    background-color: #F4F4F4;
 }
 
 .imgchat_inicio {
@@ -80,23 +72,23 @@
 
 .boxtexto {
     position: relative;
-    background-color: rgb(248, 248, 248);
-    padding: 15px;
+    background-color: #f9f9f9;
+    padding: 22px 30px;
     width: 100%;
 }
 
 .inbox_people {
     background: #f8f8f8 none repeat scroll 0 0;
     float: left;
-    overflow: hidden;
+    overflow-y: scroll;
     width: 100%;
+    height: 76vh;
     border-right: 1px solid #c4c4c4;
 }
 
 .inbox_msg {
     border: 1px solid #c4c4c4;
     clear: both;
-    overflow: hidden;
 }
 
 .top_spac {
@@ -116,7 +108,6 @@
 
 .headind_srch {
     padding: 10px 29px 10px 20px;
-    overflow: hidden;
     border-bottom: 1px solid #c4c4c4;
 }
 
@@ -181,10 +172,6 @@
     padding: 18px 16px 10px;
 }
 
-.inbox_chat {
-    overflow-y: scroll;
-}
-
 .active_chat {
     background: #ebebeb;
 }
@@ -211,7 +198,7 @@
 
 .received_withd_msg p {
     background: #ebebeb none repeat scroll 0 0;
-    border-radius: 3px;
+    border-radius: 0px 7px 7px 7px;
     color: #646464;
     font-size: 16px;
     margin: 0;
@@ -228,9 +215,9 @@
 
 .mesgs {
     float: initial;
-    height: 320px;
     padding: 30px 25px 0px 25px;
     width: 100%;
+    height: 61vh;
     overflow-y: scroll;
     background-image: url("../img/footer-claro.svg");
     background-size: cover;
@@ -238,7 +225,7 @@
 
 .sent_msg p {
     background: $primary-color none repeat scroll 0 0;
-    border-radius: 3px;
+    border-radius: 7px 0px 7px 7px;
     font-size: 16px;
     margin: 0;
     color: #fff;
@@ -257,13 +244,14 @@
 
 .adicionarinpult {
     box-shadow: 1px 1px 10px 1px rgb(224, 224, 224);
-    width: 100%;
     position: relative;
     height: 40px;
     font-size: 16px;
     color: #3a3a3a;
     font-weight: normal;
     padding: 4px 4px 4px 20px;
+    display: inline-flex;
+    width: 100%;
 }
 
 .enviarmsg img {
@@ -278,5 +266,4 @@
     align-items: center;
     padding: 5px;
     background-color: white;
-    margin-top: 10px;
 }
