--- a/resources/sass/pages/welcome.scss
+++ b/resources/sass/pages/welcome.scss
@@ -2,16 +2,17 @@
 @import '../components/reset';
 @import '../components/logo';
 @import '../components/style';
-.navbar {
+.navbar__home {
     position: fixed;
+    padding: 10px calc(8%/2);
+    display: inline-flex;
     width: 100%;
-    padding-left: 4rem;
 }
 
 .top-right {
     padding: 20px;
     right: 10px;
-    top: 18px;
+    position: absolute;
 }
 
 .content {
@@ -19,7 +20,7 @@
     text-align: center;
     background-image: url("../img/telaInicio.svg");
     background-repeat: no-repeat;
-    width: 100vw;
+    width: 100%;
     background-size: cover;
 }
 
@@ -60,6 +61,7 @@
 .botaosaiba {
     border: 2px solid #ffffff;
     padding: 12px;
+    width: 17em;
     color: #ffffff;
     font-weight: 600;
     font-size: 1rem;
@@ -73,18 +75,17 @@
 .homebutton {
     padding-top: 25px;
     display: grid;
-    position: relative;
-    width: 17rem;
-    left: 10em;
+    width: 100%;
+    position: absolute;
+    justify-content: center;
 }
 
 .conteudo-home {
     text-align: center;
-    position: relative;
-    float: right;
-    right: 4em;
-    width: 40em;
-    text-align: center;
+    position: absolute;
+    justify-content: right;
+    right: calc(8%/2);
+    max-width: 100%;
     top: 250px;
 }
 
@@ -92,4 +93,28 @@ a:hover {
     text-decoration: none;
     font-weight: bold;
     color: #ffffff;
+}
+
+@media(max-width: 1100px) {
+    .content {
+        background-image: url("../img/telaLampamin.svg");
+        background-position: center;
+    }
+    .conteudo-home {
+        padding: 10px;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        right: 0;
+        top: calc(110%/2);
+        left: 0;
+        padding-left: 20px;
+    }
+}
+
+.footer-inicial {
+    background-image: url("../img/footer.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 10em;
 }
