--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -308,3 +308,17 @@ input[type="file"] {
     top: -32px;
     margin-right: 15px;
 }
+
+.botaowhite {
+    border: 1px solid rgb(235, 235, 235);
+    padding: 5px;
+    background-color: white;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    box-shadow: 2px 2px 0 rgb(224, 224, 224);
+}
+
+.botaowhite:hover {
+    background-color: rgb(247, 247, 247);
+}
