--- a/resources/sass/layouts/_l-content-aside.scss
+++ b/resources/sass/layouts/_l-content-aside.scss
@@ -18,4 +18,8 @@
     &__conversa {
         flex: 8 1 400px;
     }
+    &__perquisargrupo {
+        flex: 2 1 250px;
+        float: left;
+    }
 }
