Perfil do Usuario V1

--- a/resources/sass/components/_btn.scss
+++ b/resources/sass/components/_btn.scss
@@ -13,3 +13,11 @@
     color: white;
     @include hoverDarkenEffect($primary-color)
 }
+
+.btn--secondary {
+    @extend %btn;
+    background-color: $background-color;
+    color: rgb(80, 80, 80);
+    border: 1px solid rgb(148, 148, 148);
+    @include hoverDarkenEffect($background-color);
+}
