--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -280,6 +280,15 @@ input[type="file"] {
     width: 24px;
 }
 
+.hazul {
+    font-family: $font-stack;
+    color: #0b0b31;
+    font-weight: bold;
+    margin-left: 10px;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
 .hclaro {
     font-family: $font-stack;
     padding-bottom: 20px;
